# aplang-website

./: .gitignore  .gitmodules  .prettierignore  .prettierrc  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.github/workflows/: docker-deploy.yml  test-ssh-scp.yaml
app/: body-wrapper.tsx  header.tsx  layout.tsx  page.tsx  themes.ts  utils.ts  worker.js  worker_response.ts
app/components/: color-mode-toggle.tsx  editor.tsx  layout-tabs.tsx  run-button.tsx
app/install/: cargo.tsx  macos.tsx  ms-store.tsx  page.tsx  source.tsx  win-get.tsx  windows.tsx
app/playground/: page.tsx  utils.ts
app/playground/components/: color-mode-toggle.tsx  editor.tsx  input-prompt.tsx  preset-selector.tsx  run-button.tsx  settings.tsx
assets/icons/: Heart.tsx
assets/logos/: AdvancedInstallerLogo.tsx
components/custom/: code-line.tsx
public/: worker.js
public/playground/: worker.js
wasm-target/: Cargo.toml
wasm-target/src/: lib.rs
