[package]
name = "wasm-target"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
#aplang = { git= "https://github.com/snowfoxsh/aplang", default-features = false, features = ["wasm"] }
aplang = { path="../../aplang", default-features = false, features = ["wasm"] }
# wasm
wasm-bindgen = "0.2.93"
web-sys = "0.3.70"
