[package]
name = "wasm-target"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]

wasm-bindgen = "0.2.93"
web-sys = "0.3.70"

# aplang = { path="/code/rust/aplang", default-features = false, features = ["wasm"] }
[dependencies.aplang_lib]
package = "aplang"
git = "https://github.com/snowfoxsh/aplang"
default-features = false
features = ["wasm"]